Home page icons and spacing fixed

--- a/Epilogger.Web/Public/css/sadiehawkins.css
+++ b/Epilogger.Web/Public/css/sadiehawkins.css
@@ -681,20 +681,20 @@ ul#left-nav li ul li a.current {color:#a44b79;}
     background-position:0 0;}
     
 .dashboard-activity-entry strong.title.PHOTOS_VIDEOS {
-    background-position:0 -24px;
+    background-position:0 -50px;
     padding-left:28px;}
     
 .dashboard-activity-entry strong.title.EVENT_CREATION {
-    background-position:0 -56px;
+    background-position:0 -100px;
     padding-left:28px;}
 
 #homepage-content {float:left;width:880px;}
 .homepage-activity-entry { float:left;height:184px;overflow:hidden;margin:0px 20px 20px 0px;width:200px;color:#828282; }
 .homepage-activity-entry h2 a { color: #ee4490;}
-.homepage-activity-entry strong.title {font-weight:normal; color:#5086b9;margin-bottom:10px;padding-left:24px;background-image:url(../images/event_activity_title_icons.png);background-repeat: no-repeat;font-size:12px;text-transform:uppercase;margin-bottom:5px;display:block;}
+.homepage-activity-entry strong.title {font-weight:normal; color:#5086b9;margin-bottom:10px;padding-left:24px;background-image:url(../images/event_activity_title_icons.png);background-repeat: no-repeat;font-size:12px;text-transform:uppercase;margin-bottom:5px;display:block; }
 .homepage-activity-entry strong.title.TWEET {background-position:0 0;}
-.homepage-activity-entry strong.title.PHOTOS_VIDEOS { background-position:0 -24px;padding-left:28px; }
-.homepage-activity-entry strong.title.EVENT_CREATION {background-position:0 -56px;padding-left:28px;}
+.homepage-activity-entry strong.title.PHOTOS_VIDEOS { background-position:0 -50px;padding-left:28px; }
+.homepage-activity-entry strong.title.EVENT_CREATION {background-position:0 -100px;padding-left:28px;}
 
 .profile-card {margin-bottom:10px;}
 .profile-card h4 {background:#fe60b1;color:#fff;float:left;padding:5px 10px 5px 10px;}
